static ineer sınıflar

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /JavaApplication2/nbproject/private/
 /JavaApplication2/build/
+/Statik İneer Classlar/nbproject/private/
+/Statik İneer Classlar/build/
